--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
       <input placeholder="Artist Name" class="artist" />
       <input placeholder="Image URL" class="image" />
       <input placeholder="Song Link Address" class="link" />
+       <input placeholder="Length" class="length" />
       <button class="add">Add</button>
     </div>
     <div class="display">
